--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "build:ui": "rm -rf dist && cd ../full-stack-open/part_2/phonebook && npm run build && cp -r dist ../../../fso-part3" ,
+    "build:ui": "rm -rf dist && cd ../full-stack-open/part_2/phonebook && npm run build && cp -r dist ../../../fso-part3",
+    "lint": "eslint .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -20,6 +21,9 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "eslint": "^8.46.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.28.0",
     "nodemon": "^3.0.1"
   }
 }
